add progress bar to quiz screen and loading overlay to results page

--- a/quiz.html
+++ b/quiz.html
@@ -16,6 +16,9 @@
                 <span id="question-progress"></span>
                 <span id="scoreboard"></span>
             </div>
+            <div class="progress-container">
+                <div class="progress-bar" id="progress-bar"></div>
+            </div>
             <div class="question-card">
                 <h2 id="question-text"></h2>
                 <div id="options-container" class="options"></div>
