--- a/results.html
+++ b/results.html
@@ -21,6 +21,11 @@
         </section>
     </main>
 
+    <div id="loading-overlay" class="loading-overlay">
+        <div class="loading-spinner"></div>
+        <div class="loading-text">LOADING...</div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
