--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         </section>
     </main>
 
+    <div id="loading-overlay" class="loading-overlay">
+        <div class="loading-spinner"></div>
+        <div class="loading-text">LOADING...</div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
