--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="category-grid">
                 <button class="category-btn" data-category="aptitude">Aptitude</button>
                 <button class="category-btn" data-category="technical">Technical</button>
-                <button class="category-btn" data-category="maths">Maths</button>
+                <button class="category-btn" data-category="ai">AI</button>
             </div>
         </section>
     </main>
